streamforge.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/part-of: streamforge-application
  name: streamforge
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: streamforge-application
  name: sf-api-svc
  namespace: streamforge
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: streamforge-application
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: streamforge-application
  name: sf-frontend-svc
  namespace: streamforge
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: streamforge-application
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: queue
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
  name: sf-rabbitmq-svc
  namespace: streamforge
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
  selector:
    app.kubernetes.io/component: queue
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: transcoder
    app.kubernetes.io/part-of: streamforge-application
  name: sf-transcoder-svc
  namespace: streamforge
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: transcoder
    app.kubernetes.io/part-of: streamforge-application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: streamforge-application
    azure.workload.identity/use: "true"
  name: sf-api
  namespace: streamforge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backend
      app.kubernetes.io/name: api
      app.kubernetes.io/part-of: streamforge-application
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: streamforge-application
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - api
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - envFrom:
            - configMapRef:
                name: sf-configmaps
            - secretRef:
                name: sf-secrets
          image: ghcr.io/sudheerkumarp0357/streamforge/api:sha-c54dea49e5eb2eebe5147661d618897e4ad5e6a7
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          name: api
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

          volumeMounts:
            - mountPath: /mnt/secrets-store
              name: sf-secrets
              readOnly: true
      serviceAccountName: sf-workload-sa
      volumes:
        - csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kv-sf
          name: sf-secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: streamforge-application
  name: sf-frontend
  namespace: streamforge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/name: frontend
      app.kubernetes.io/part-of: streamforge-application
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: streamforge-application
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - frontend
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - env:
            - name: API_URL
              value: http://sf-api-svc:8080
            - name: APP_ENV
              value: development
          image: ghcr.io/sudheerkumarp0357/streamforge/frontend:latest
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          name: frontend
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: queue
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
    azure.workload.identity/use: "true"
  name: sf-rabbitmq
  namespace: streamforge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: queue
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/part-of: streamforge-application
  template:
    metadata:
      labels:
        app.kubernetes.io/component: queue
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/part-of: streamforge-application
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - rabbitmq
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_USER
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_USER
                  name: sf-configmaps
            - name: RABBITMQ_DEFAULT_PASS
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_DEFAULT_PASS
                  name: sf-secrets
          image: rabbitmq:4.2.4-alpine
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          name: sf-rabbitmq
          ports:
            - containerPort: 5672
              name: amqp
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: sf-rabbitmq-data
            - mountPath: /mnt/secrets-store
              name: sf-secrets
              readOnly: true
      serviceAccountName: sf-workload-sa
      volumes:
        - name: sf-rabbitmq-data
          persistentVolumeClaim:
            claimName: pvc-streamforge-rabbitmq
        - csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kv-sf
          name: sf-secrets
---
