gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    alb.networking.azure.io/alb-name: alb-infra
    alb.networking.azure.io/alb-namespace: azure-alb-system
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: streamforge-infra
  name: streamforge-gateway
  namespace: streamforge
spec:
  gatewayClassName: azure-alb-external
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.sudheer.fun"
      name: https-listener
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: stremforge-tls-secret
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.sudheer.fun"
      name: http-listener
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: streamforge-infra
  name: streamforge-httproute
  namespace: streamforge
spec:
  hostnames:
    - sudheer.fun
    - "*.sudheer.fun"
  parentRefs:
    - name: streamforge-gateway
      namespace: streamforge
      sectionName: http-listener
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: streamforge
  labels:
    app.kubernetes.io/part-of: streamforge-infra
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: streamforge-gateway
      namespace: streamforge
      sectionName: https-listener
  hostnames:
    - "sudheer.fun"
    - "*.sudheer.fun"
  rules:
    - backendRefs:
        - name: sf-frontend-svc
          port: 80
